registration reminder modal works

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,3 +86,22 @@ a {
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.modal {
+  background-color: white;
+}
+
+.modal {
+ 
+  width: 600px;
+  height: 300px;
+  border: solid;
+  position: fixed;
+  top: 30vh;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+}
+
+
