added navigation buttons to saved websites page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,6 +99,7 @@ button:focus-visible {
   border-bottom: solid;
   width: 30vw;
   margin: 0 auto;
+  border-width: .1px;
 }
 .websiteSubheading {
   font-size: 30px;
