altered user website header

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* background-color:#f0f4f7; */
+  padding-bottom: 200px;
 }
 
 h1 {
@@ -64,6 +66,7 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+    /* background-color: white; */
   }
 }
 
@@ -124,7 +127,6 @@ button:focus-visible {
 
 .websitePageButton {
   background-color: white;
-  text-decoration: underline;
 
 }
 
