--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,15 +22,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  /* background-color:#f0f4f7; */
-  padding-bottom: 200px;
-}
+
 
 h1 {
   font-size: 3.2em;
@@ -70,9 +62,82 @@ button:focus-visible {
   }
 }
 
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: #f7f5fc;
+  background-color:#9dbfe3;
+  background-image: url("https://cdn4.volusion.store/exgsz-ywkdq/v/vspfiles/photos/PDG250x150x100Blk-2.jpg?v-cache=1530789477");
+  background-image: url("https://cdn4.volusion.store/exgsz-ywkdq/v/vspfiles/photos/PDG250x150x100Blk-2.jpg?v-cache=1530789477");
+
+  padding-bottom: 200px;
+}
+
+.appHeader{
+  position: fixed;
+   top: 0vw;
+   left: 0;
+   right: 0;
+   background-color: white;
+
+  
+  }
+
 .appSubheading {
   margin-top: -15px;
 }
+
+.websiteFormCard {
+  width: 60vw;
+  height: 1600px;
+}
+
+.websiteFormHeading {
+  padding-top: 30px;
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+label {
+  font-size: 20px; 
+  padding-right: 10px;
+}
+
+input {
+  width: 31vw;
+  font-size: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 8px;
+  border: solid;
+  border-width: .2px;
+  border-radius: 3px;
+  margin-top: 5px;
+}
+
+textarea{
+  font-size: 20px;
+  margin-top: 5px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 3px;
+  border-width: .2px;
+  width: 45vw;
+  height: 30vh;
+
+}
+
+.formText {
+ width: 50vw;
+ margin: 0 auto;
+ font-size: 20px;
+}
+
+
 .websitePageButtons {
   display: flex;
   justify-content: center;
@@ -90,6 +155,7 @@ button:focus-visible {
   width: 100vw;
   margin: 0 auto;
   background-color: white;
+  font-family: Palatino, URW Palladio L, serif;
 }
 
 .longBreakLine {
@@ -101,6 +167,13 @@ button:focus-visible {
 .shortBreakLine {
   border-bottom: solid;
   width: 30vw;
+  margin: 0 auto;
+  border-width: .1px;
+}
+
+.tinyBreakLine {
+  border-bottom: solid;
+  width: 10vw;
   margin: 0 auto;
   border-width: .1px;
 }
@@ -123,11 +196,14 @@ button:focus-visible {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #ede9e6;
+  font-family: Palatino, URW Palladio L, serif;
+  font-family: Optima, sans-serif;
+  /* font-family: Courier New, monospace; */
 }
 
 .websitePageButton {
   background-color: white;
-
+  font-size: 19px;
 }
 
 .paragraphHeading {
@@ -138,8 +214,16 @@ button:focus-visible {
   width: 60vw;
   margin: 0 auto;
   font-size: 23px;
- 
+  margin-top: -13px;
   
+}
+.paragraph{
+  width: 60vw;
+  margin: 0 auto;
+  font-size: 23px;
+  margin-top: -13px;
+  border: double;
+  border-width: thick;
 }
 
 .mainPhoto {
@@ -209,16 +293,10 @@ a {
 }
 
 .createdMessage {
-  animation: fade-down 6s;
+  animation: fade-down 1s;
 }
 
-.appHeader{
-position: fixed;
- top: 0vw;
- left: 0;
- right: 0;
- background-color: white;
-}
+
 
 .headerBlocker{
 position: absolute;
@@ -265,6 +343,7 @@ position: absolute;
 
 .appBody {
   margin-top: 30vh;
+  background-color: white;
 }
 
 .pageDivider {
