--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,8 +76,6 @@ body {
   background-size: cover;
   background-position-x: center;
 
-
-  /* padding-bottom: 200px; */
 }
 
 .appHeader{
@@ -100,7 +98,7 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  height: 300px;
+  height: 500px;
   width: 100vw;
   background-color: #ebedf5;
   margin-top: 30px;
@@ -112,11 +110,19 @@ body {
 .websiteFormCard {
   display: flex;
   justify-content: center;
-  height: 1700px;
+  height: 2000px;
   background-color: white;
   margin: 0 auto;
 }
 
+.submitButton {
+  width: 100px;
+  margin: 0 auto;
+}
+
+.createWebsiteButton {
+  width: 200px;
+}
 
 .websiteFormHeading {
   padding-top: 30px;
@@ -286,7 +292,7 @@ a {
 
 .modal {
  
-  width: 500px;
+  width: 450px;
   height: 300px;
   border: solid;
   border-width: 1px;
@@ -390,4 +396,21 @@ button {
   display: flex;
   justify-content: right;
   padding-right: 30px;
+}
+
+.loginForm {
+  width: 45vw;
+  display: flex;
+  flex-direction: column;
+  margin-top: -350px;
+  margin-bottom: 80px;
+}
+
+.registrationForm {
+  width: 45vw;
+  margin-top: -300px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 80px;
+
 }
