--- a/client/src/index.css
+++ b/client/src/index.css
@@ -128,6 +128,7 @@ body {
   font-size: 30px;
   margin-bottom: 10px;
   width: 60vw;
+  margin: 0 auto;
  
 }
 
@@ -439,5 +440,12 @@ button {
   width: 40vw;
   height: 250px;
   margin-top: -350px;
- 
+}
+
+.appIntro {
+  width: 70%;
+  margin: 0 auto;
+  font-size: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
