additional dark mode media query adjustments

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,6 +74,12 @@ button:focus-visible {
     background-color: #f9f9f9;
     /* background-color: white; */
   }
+  input {
+    background-color: white;
+  }
+  textarea {
+    background-color: white;
+  }
 }
 
 body {
