readjusting text area border

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -543,9 +543,10 @@ button {
   }
 
   textArea {
-    width: 190px;
+    width: 200;
     font-size: 15px;
     border-color: black;
+    border-style: solid;
   }
 
   .createWebsiteButton {
