--- a/client/src/index.css
+++ b/client/src/index.css
@@ -543,7 +543,7 @@ button {
   }
 
   textArea {
-    width: 200;
+    width: 200px;
     font-size: 15px;
     border-color: black;
     border-style: solid;
