fixing border color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -546,6 +546,7 @@ button {
     width: 200px;
     font-size: 15px;
     border-color: black;
+    border-right-color: black;
     border-style: solid;
   }
 
