--- a/client/src/index.css
+++ b/client/src/index.css
@@ -189,6 +189,11 @@ textarea{
  font-size: 20px;
 }
 
+.formText2 {
+  width: 40vw;
+  margin: 0 auto;
+  font-size: 15px;
+ }
 
 .websitePageButtons {
   display: flex;
@@ -527,6 +532,10 @@ button {
 
   .formText {
     font-size: 15px;
+    width: 250px;
+  }
+  .formText2 {
+    font-size: 10px;
     width: 250px;
   }
 
