--- a/client/src/index.css
+++ b/client/src/index.css
@@ -189,10 +189,11 @@ textarea{
  font-size: 20px;
 }
 
-.formText2 {
-  width: 75vw;
+.imageLink {
+  width: 40vw;
   margin: 0 auto;
-  font-size: 18px;
+  font-size: 20px;
+  text-decoration: underline;
  }
 
 .websitePageButtons {
@@ -534,8 +535,8 @@ button {
     font-size: 15px;
     width: 250px;
   }
-  .formText2 {
-    font-size: 10px;
+  .imageLink{
+    font-size: 15px;
     width: 250px;
   }
 
