--- a/client/src/index.css
+++ b/client/src/index.css
@@ -726,4 +726,17 @@ button {
     font-size: 14px;
   }
 
-  .confirmRemovalM
+  .confirmRemovalModalContent {
+    margin: 30px;
+  }
+
+  .removeButton {
+    margin: 0 auto;
+    display: flex;
+    align-items: space-around;
+    font-size: 14px;
+
+  }
+
+
+}
